      so that it matches Local Music and Saved Playlists panes. (BR 307386)
    * Last.fm Skip button re-added after being removed in Beta by error. (BR 311733)
    * Podcast episodes are now loaded asynchronously on startup to reduce delays.
    * Removed alpha state and not really working spectrum analyzer applet.

  BUGFIXES:
    * Fix scrobbling of plain files streamed over http. (BR 309976)
    * Fix scrobble-before-play behaviour when playing Last.fm streams.
    * Fix double-scrobbling when playing Last.fm streams. (BR 311852)
    * Fix The size of rating stars should not change in inline editing (BR 209684)
    * Various improvements that should result in more stable Audio CD playback
      (modulo phonon-vlc BR 313046). (BR 305708, BR 308084, BR 311446)
    * Fix queued track indicator overflow, patch by Riccardo Ferrazzo. (BR 253802)
    * Fix Amarok crashes when selecting song with Enter [@ Playlist::PrettyListView::trackActivate] (BR 312439)
    * Fix amarok starts at beginning of playlist if you previously stopped during a track (BR 312183)
    * Audio CD: fix crash due to no composer being set. (BR 293698)
    * Audio CD: fix track recreation on startup. (BR 312685)
    * Fix incorrect display of folder names containing & (ampersand) in File
      browser breadcrumbs. (BR 244817)
    * Fix Media Sources pane growing in size when navigating in it. (BR 246029)
    * Fix Media Sources breadcrumb items sometimes appearing as new windows. (BR 285712)
    * Fix editability and drop-ability of playlist folders.
    * Make track announcements via KDE Notifications instant. (BR 263952)
    * Fix dynamic playlist progress bar.
    * Fix Last played bias is ignored or doesn't work. (BR 311906)
    * Fix amarok dynamic play list with biases EchoNest similar artist gives no
      results. (BR 291162)
    * Fix When I try to create a dynamic playlist by Last.fm similar songs
      creation takes a lot time. (BR 301716)