@@ -15,6 +15,7 @@ VERSION 2.7
     * Removed alpha state and not really working spectrum analyzer applet.
 
   BUGFIXES:
+    * Fix a regression where stream metadata would be forgotten on start. (BR 305389)
     * Fix scrobbling of plain files streamed over http. (BR 309976)
     * Fix scrobble-before-play behaviour when playing Last.fm streams.
     * Fix double-scrobbling when playing Last.fm streams. (BR 311852)
